Improved header layout

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <header>
         <h1>
+            Ronald "Wes" Howard II
             <nav>
 
-                <a href= #aboutme>About Me</a>
+                <a href= #aboutme>About Wes Howard</a>
                 <a href= #projects>View Portfolio Projects</a>
                 <a href= #contactme>Contact Me</a>
                 
@@ -21,6 +22,10 @@
         </h1>
 
     </header>
+    <div id = "aboutme" class = "aboutme">
+
+    </div>
+    <div id = "projects" class = "projects">
 
 </body>
 
