--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Ronald Wesley Howard II Portfolio Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+  <title>My Landing Page</title>
 </head>
+
 <body>
-    <header>
-        <h1>
-            Ronald "Wes" Howard II
-            <nav>
+  <header>
+    <nav class="text-right">
+      <ul>
+        <li> <a href="https://github.com/">Github</a></li>
+        <li> <a href="#">Portfolio</a></li>
+        <li> <a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-                <a href= #aboutme>About Wes Howard</a>
-                <a href= #projects>View Portfolio Projects</a>
-                <a href= #contactme>Contact Me</a>
-                
+  <main>
+    <h1 class="text-center">My New Website</h1>
+    <figure>
+      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
+      <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
+    </figure>
+    <section id="contact">
+      <h2 class="text-center">Contact Me</h2>
+      <form>
+        <ul>
+          <li>
+            <label class="text-right" for="name">Name:</label>
+            <input type="text" id="name" name="user-name">
+          </li>
+          <li>
+            <label class="text-right" for="email">Email:</label>
+            <input type="text" id="email" name="user-email">
+          </li>
+        </ul>
+        <div class="text-center">
+          <button type="submit">SEND</button>
+        </div>
+      </form>
+    </section>
+  </main>
 
-
-            </nav>
-        </h1>
-
-    </header>
-    <div id = "aboutme" class = "aboutme">
-
-    </div>
-    <div id = "projects" class = "projects">
-
+  <footer class="text-center">
+    © 2021 My New Website Productions 
+  </footer>
+    
 </body>
-
-<footer>
-    Created by Wes Howard
-</footer>
 </html>
