Added photo, messing with formatting

--- a/index.html
+++ b/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<!-- lang defines the language to assist search engines and browsers -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <title>My Landing Page</title>
+  <title>Ronald Wesley Howard II Portfolio Page</title>
 </head>
 
 <body>
+
+
   <header>
-    <nav class="text-right">
+    <h1>Ronald "Wes" Howard II </h1>
+    <nav>
       <ul>
-        <li> <a href="https://github.com/">Github</a></li>
-        <li> <a href="#">Portfolio</a></li>
-        <li> <a href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="https://github.com/">Github</a></li>
+
       </ul>
+
+
     </nav>
   </header>
 
+
   <main>
-    <h1 class="text-center">My New Website</h1>
-    <figure>
-      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
-      <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
+    <section id= "aboutme">
+    <h2>About Me</h2>
+    
+
+    <figure class="picofme">
+      <img src="./assets/images/IMG_me1.JPG" alt="Picture of Wes Howard dressed as Gomez Adams for Halloween.">
+      <figcaption>A picture of me, hard at work or something</figcaption>
     </figure>
+    Here I will put a short introduction paragraph introducing myself and showcasing some of my skills
+
+    </section>
+
+
+
+
+
+
+
+</section>
+
+
+
+
     <section id="contact">
-      <h2 class="text-center">Contact Me</h2>
+      <h3>Contact Me</h3>
       <form>
         <ul>
           <li>
@@ -37,16 +64,17 @@
             <input type="text" id="email" name="user-email">
           </li>
         </ul>
-        <div class="text-center">
+        <div>
           <button type="submit">SEND</button>
         </div>
       </form>
     </section>
   </main>
 
-  <footer class="text-center">
-    © 2021 My New Website Productions 
+  <footer>
+    © 2021 Ronald Wesley Howard II
   </footer>
-    
+
 </body>
+
 </html>
