New picture, still formatting, broke header

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     
 
     <figure class="picofme">
-      <img src="./assets/images/IMG_me1.JPG" alt="Picture of Wes Howard dressed as Gomez Adams for Halloween.">
+      <img src="./assets/images/propic1.jpg" alt="Picture of Wes Howard dressed as Gomez Adams for Halloween.">
       <figcaption>A picture of me, hard at work or something</figcaption>
     </figure>
-    Here I will put a short introduction paragraph introducing myself and showcasing some of my skills
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</p>
 
     </section>
 
