--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     </nav>
   </header>
 
+  <div> This section has a large background image, and a subtitle for my page... creates separation from the header and the about me section</div>
+
 
   <main>
     <section id= "aboutme">
@@ -39,7 +41,11 @@
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</p>
 
     </section>
+<section>
 
+This will be the section with all my portfolio projects in it. 
+
+</section>
 
 
 
