More formatting, added subheader image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </nav>
   </header>
 
-  <div> This section has a large background image, and a subtitle for my page... creates separation from the header and the about me section</div>
+   <div class = "intro-image">
+     <figure>Professional Web Development Services </figure>
+
+   </div>
 
 
   <main>
