Fixed header, fixed and renamed nav links

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav>
       <ul>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="https://github.com/">Github</a></li>
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
 
       </ul>
 
@@ -38,13 +38,13 @@
     
 
     <figure class="picofme">
-      <img src="./assets/images/propic1.jpg" alt="Picture of Wes Howard dressed as Gomez Adams for Halloween.">
-      <figcaption>A picture of me, hard at work or something</figcaption>
+      <img src="./assets/images/propic1.jpg" alt="Picture of Wes Howard, ready to work.">
+      <figcaption>About Me</figcaption>
     </figure>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</p>
 
     </section>
-<section>
+<section id="portfolio">
 
 This will be the section with all my portfolio projects in it. 
 
