Better alignment of photo and aboutme section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <main>
     <section id= "aboutme">
+      <div>
     <h2>About Me</h2>
     
 
@@ -41,12 +42,14 @@
       <img src="./assets/images/propic1.jpg" alt="Picture of Wes Howard, ready to work.">
       <figcaption>About Me</figcaption>
     </figure>
+    </div>
+    
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</p>
 
     </section>
 <section id="portfolio">
 
-This will be the section with all my portfolio projects in it. 
+This will be the section with all my portfolio project links in it. 
 
 </section>
 
