better alignment in aboutme section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <figure class="picofme">
       <img src="./assets/images/propic1.jpg" alt="Picture of Wes Howard, ready to work.">
-      <figcaption>About Me</figcaption>
+      
     </figure>
     </div>
     
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</p>
+      <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</article>
 
     </section>
 <section id="portfolio">
