started updating aboutme with small paragraph

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
         </figure>
       </div>
 
-      <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis velit ut iusto illo soluta ducimus earum
-        dolor est ipsum tempore inventore quidem quos voluptas, perferendis temporibus hic. Eveniet, dolor ab.</article>
+      <article>In 2019 I decided to change careers into tech, and have been working hard to make it a reality. Currently, I am enrolled in University of Arizona's online coding bootcamp.
+        Learning to code and solve problems has been a real joy for me, and is something I can enjoy doing. My hobbies outside of 
+        coding are mainly related to gaming and music, I like all games and most music. 
+      </article>
 
     </section>
 
@@ -86,21 +88,14 @@
 
     <section id="contact">
       <h3>Contact Me</h3>
-      <form>
+      
         <ul>
-          <li>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="user-name">
-          </li>
-          <li>
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="user-email">
-          </li>
+          <li><a href="#contact">928-num-caller</a></li>
+          <li><a href="#">EmailAddy@emailaddress.com</a></li>
+          <li><a href="#https://github.com/BiggRonn/PortfolioRWH">GitHub Portfolio</a></li>
+          <li><a href="#">LinkedIn</a></li>
+  
         </ul>
-        <div>
-          <button type="submit">SEND</button>
-        </div>
-      </form>
     </section>
   </main>
 
