got all project cards with images!

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="projects">
 
-        <a class="project-cards" id="project1" href="https://biggronn.github.io/PortfolioRWH/"><div class = "project-preview">Portfolio Website</div>
+        <a class="project-cards" id="portfolioRWH" href="https://biggronn.github.io/PortfolioRWH/"><div class = "project-preview">Portfolio Website</div>
           
           
         </a>
