--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <li><a href="#contact">928-num-caller</a></li>
           <li><a href="#">EmailAddy@emailaddress.com</a></li>
           <li><a href="#https://github.com/BiggRonn/PortfolioRWH">GitHub Portfolio</a></li>
-          <li><a href="#">LinkedIn</a></li>
+          <li><a href="#https://www.linkedin.com/in/RonaldWesHoward">LinkedIn</a></li>
   
         </ul>
     </section>
